--- a/Source/DotSpatial.Analysis.Tests/DotSpatial.Analysis.Tests.csproj
+++ b/Source/DotSpatial.Analysis.Tests/DotSpatial.Analysis.Tests.csproj
@@ -10,8 +10,9 @@
     <GenerateAssemblyVersionAttribute>False</GenerateAssemblyVersionAttribute>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="NUnit" Version="2.6.3" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
+	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+	<PackageReference Include="NUnit" Version="3.12.0" />
+	<PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DotSpatial.Analysis\DotSpatial.Analysis.csproj" />
