--- a/Source/DotSpatial.Positioning.Compact/GPS/Examples/Desktop Framework/C#/GPS Diagnostics DF20 (CSharp).csproj
+++ b/Source/DotSpatial.Positioning.Compact/GPS/Examples/Desktop Framework/C#/GPS Diagnostics DF20 (CSharp).csproj
@@ -7,6 +7,7 @@
     <GenerateAssemblyProductAttribute>False</GenerateAssemblyProductAttribute>
     <GenerateAssemblyTitleAttribute>False</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyVersionAttribute>False</GenerateAssemblyVersionAttribute>
+    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\GeoFramework\2.0.0 Open Source\GeoFramework %28Desktop Framework 2.0%29.csproj" />
