--- a/Source/DotSpatial.Plugins.MapWindowProjectFileCompatibility/DotSpatial.Plugins.MapWindowProjectFileCompatibility.csproj
+++ b/Source/DotSpatial.Plugins.MapWindowProjectFileCompatibility/DotSpatial.Plugins.MapWindowProjectFileCompatibility.csproj
@@ -7,6 +7,7 @@
     <GenerateAssemblyProductAttribute>False</GenerateAssemblyProductAttribute>
     <GenerateAssemblyTitleAttribute>False</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyVersionAttribute>False</GenerateAssemblyVersionAttribute>
+    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="DotNetZip" Version="1.9.8" />
