--- a/Source/DotSpatial.Plugins.ScaleBar/DotSpatial.Plugins.ScaleBar.csproj
+++ b/Source/DotSpatial.Plugins.ScaleBar/DotSpatial.Plugins.ScaleBar.csproj
@@ -7,6 +7,7 @@
     <GenerateAssemblyProductAttribute>False</GenerateAssemblyProductAttribute>
     <GenerateAssemblyTitleAttribute>False</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyVersionAttribute>False</GenerateAssemblyVersionAttribute>
+    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="GeoDigital.GeoAPI" Version="2.0.3" />
