--- a/Source/DotSpatial.Positioning.Compact/GPS/DotSpatial.Positioning.GPS.csproj
+++ b/Source/DotSpatial.Positioning.Compact/GPS/DotSpatial.Positioning.GPS.csproj
@@ -7,6 +7,7 @@
     <GenerateAssemblyProductAttribute>False</GenerateAssemblyProductAttribute>
     <GenerateAssemblyTitleAttribute>False</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyVersionAttribute>False</GenerateAssemblyVersionAttribute>
+    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\GeoSpatial\DotSpatial.Positioning.csproj" />
