--- a/Source/DotSpatial.Positioning.Compact/GeoSpatial/DotSpatial.Positioning.csproj
+++ b/Source/DotSpatial.Positioning.Compact/GeoSpatial/DotSpatial.Positioning.csproj
@@ -7,5 +7,6 @@
     <GenerateAssemblyProductAttribute>False</GenerateAssemblyProductAttribute>
     <GenerateAssemblyTitleAttribute>False</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyVersionAttribute>False</GenerateAssemblyVersionAttribute>
+    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
   </PropertyGroup>
 </Project>
