--- a/Source/DotSpatial.Positioning.Forms/DotSpatial.Positioning.Forms.csproj
+++ b/Source/DotSpatial.Positioning.Forms/DotSpatial.Positioning.Forms.csproj
@@ -7,6 +7,7 @@
     <GenerateAssemblyProductAttribute>False</GenerateAssemblyProductAttribute>
     <GenerateAssemblyTitleAttribute>False</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyVersionAttribute>False</GenerateAssemblyVersionAttribute>
+    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\DotSpatial.Positioning\DotSpatial.Positioning.csproj" />
