--- a/Source/DotSpatial.Projections.Forms/DotSpatial.Projections.Forms.csproj
+++ b/Source/DotSpatial.Projections.Forms/DotSpatial.Projections.Forms.csproj
@@ -11,6 +11,7 @@
     <ApplicationIcon />
     <OutputType>Library</OutputType>
     <StartupObject />
+    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.0-beta001" />
