--- a/Source/Examples/DemoGPS/C#/GPS Diagnostics DF20 (CSharp).csproj
+++ b/Source/Examples/DemoGPS/C#/GPS Diagnostics DF20 (CSharp).csproj
@@ -7,6 +7,7 @@
     <GenerateAssemblyProductAttribute>False</GenerateAssemblyProductAttribute>
     <GenerateAssemblyTitleAttribute>False</GenerateAssemblyTitleAttribute>
     <GenerateAssemblyVersionAttribute>False</GenerateAssemblyVersionAttribute>
+    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="DotSpatial.Positioning" Version="2.0.0-rc1" />
