The solution (minus a few extraneous projects) builds now

--- a/Source/DotSpatial.Data.Rasters.GdalExtension.Tests/DotSpatial.Data.Rasters.GdalExtension.Tests.csproj
+++ b/Source/DotSpatial.Data.Rasters.GdalExtension.Tests/DotSpatial.Data.Rasters.GdalExtension.Tests.csproj
@@ -15,6 +15,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DotSpatial.Tests.Common\DotSpatial.Tests.Common.csproj" />
+    <ProjectReference Include="..\DotSpatial.Tools.Tests\DotSpatial.Tools.Tests.csproj" />
+    <ProjectReference Include="..\DotSpatial.Tools\DotSpatial.Tools.csproj" />
   </ItemGroup>
 
 </Project>
