Fix NUnit initialization error in Projections.Tests, and others

--- a/Source/DotSpatial.Projections.Tests/DotSpatial.Projections.Tests.csproj
+++ b/Source/DotSpatial.Projections.Tests/DotSpatial.Projections.Tests.csproj
@@ -21,4 +21,24 @@
   <ItemGroup>
     <ProjectReference Include="..\DotSpatial.Projections\DotSpatial.Projections.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="GeogTransformGrids\alaska.lla">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="GeogTransformGrids\conus.lla">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="GeogTransformGrids\ntv1_can.dat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="GeogTransformGrids\ntv2_0.GSB">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\FormattedProjectionFile.prj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\StandardProjectionFile.prj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
