--- a/Source/DotSpatial.Analysis.Tests/DotSpatial.Analysis.Tests.csproj
+++ b/Source/DotSpatial.Analysis.Tests/DotSpatial.Analysis.Tests.csproj
@@ -26,4 +26,33 @@
     <ProjectReference Include="..\DotSpatial.Symbology\DotSpatial.Symbology.csproj" />
     <ProjectReference Include="..\DotSpatial.Tools\DotSpatial.Tools.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="Data\elbe_watershed1.dbf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\elbe_watershed1.prj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\elbe_watershed1.shp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\elbe_watershed1.shx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\kriging.bgd">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\VoronoiTest.dbf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\VoronoiTest.prj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\VoronoiTest.shp">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\VoronoiTest.shx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
