--- a/Source/DotSpatial.Data/DotSpatial.Data.csproj
+++ b/Source/DotSpatial.Data/DotSpatial.Data.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="System.Data.OleDb" Version="4.6.0" />
     <PackageReference Include="System.Drawing.Common" Version="4.6.0" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.6.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DotSpatial.Projections\DotSpatial.Projections.csproj" />
